<resources>
    <string name="app_name">DFinancialNotebook</string>
    <string name="welcome_screen_title">Сейчас будем\nсчитать деньги</string>

    <string name="current_balance_title">Баланс</string>

    <string name="name">Название</string>

    <string name="banks">Банки</string>
    <string name="bank">Банк</string>

    <string name="categories">Категории</string>
    <string name="category">Категория</string>

    <string name="amount">Сумма</string>

    <string name="creating_date">Дата создания</string>

    <string name="comment">Комментарий</string>

    <string name="add">Добавить</string>

    <string name="add_transaction_header">Добавление транзакции</string>

    <string name="ok">OK</string>

    <string name="error_name">Нужно заполнить Название</string>
    <string name="error_bank">Нужно выбрать Банк</string>
    <string name="error_category">Нужно выбрать Категория</string>
    <string name="error_amount">Нужно заполнить Сумма</string>
    <string name="error_creating_date">Нужно заполнить Дата создания</string>
</resources>