<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_dark_gray">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/back_button_top_margin"
        android:background="@drawable/borders_orange"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCurrentBalanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_8"
            android:layout_weight="1"
            android:text="@string/current_balance_title"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_header" />

        <TextView
            android:id="@+id/tvCurrentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_8"
            android:layout_weight="1"
            android:text="123"
            android:textSize="@dimen/text_size_header" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ivTransactionBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBank"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/dimen_4"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardCornerRadius="100dp">

            <TextView
                android:id="@+id/cvBankText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/banks"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_button" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCategory"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/dimen_4"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardCornerRadius="100dp">

            <TextView
                android:id="@+id/cvCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/categories"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_button" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAdd"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/dimen_4"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardCornerRadius="100dp">

            <TextView
                android:id="@+id/cvAddText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_button" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/ivTransactionBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:translationY="20dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llButtons">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginBottom="20dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivTransactionBlock">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_bottom_margin">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTransactions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>